--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ server.port=7070
 
 # Set context path for application
 server.servlet.context-path=/udemy
+
+# Spring security
+spring.security.user.name=user
+spring.security.user.password=password
