add lazy annotation to avoid initialization of unused classes. Also global lazy in application.properties, but commented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ server.servlet.context-path=/udemy
 # Spring security
 spring.security.user.name=user
 spring.security.user.password=password
+
+# Lazy initialization: will only initialize classes and beans if needed:
+# spring.main.lazy-initialization=true
