--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dinrev
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 
